fixed index body alignment and added content

--- a/css/large.css
+++ b/css/large.css
@@ -38,8 +38,6 @@ header {
     main {
         padding: 0;
         min-height: 10rem;
-        margin-left: 2%;
-        margin-right: 1%;
     }
 form label.sbs {
     padding: .4rem 0;
