--- a/css/medium.css
+++ b/css/medium.css
@@ -6,7 +6,7 @@
 /*----------- HEADER --------------*/
 
 /*----------- NAVIGATION --------------*/
-
+    nav ul li {float: left; width: 25%;}
 /*----------- MAIN --------------*/
 
 /*----------- FOOTER --------------*/
