--- a/css/small.css
+++ b/css/small.css
@@ -6,7 +6,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 /*----------- BODY --------------*/
 body {
-    font-size: 16px;
+    font-size: 16px;  /* browser default */
     font-family: 'Titillium Web', Verdana, sans-serif;
 }
 
@@ -66,12 +66,12 @@ nav ul.hide {display: none;}
 
 /*----------- MAIN --------------*/
 main {
-    padding: 0;
+    padding: 1rem 2%;
     min-height: 10rem;
-    margin-left: 2%;
+/*    margin-left: 2%;*/
 }
 main figure.myphoto {width: 50%; margin: 0 0 0 2%; float: right;}
-main figure.myphoto img {width: 100%;}
+main figure.myphoto img {width: 100%; border-radius: 5%;}
 main figure.myphoto figcaption {text-align: center; font-size: .75rem; margin-bottom: 2px;}
 
 
